<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/grid_image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/grid_item_image"
        android:src="@drawable/editor_tea_image" />

    <TextView
        android:id="@+id/grid_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/grid_item_green_tea"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/grid_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="4dp"
        android:text="@string/grid_item_quantity"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/grid_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="4dp"
        android:text="@string/grid_item_price"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/grid_sale_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_item_sale_button" />

</LinearLayout>