<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/editor_tea_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:padding="16dp"
            android:src="@drawable/editor_tea_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:text="@string/main_category_description"
                android:textColor="@color/colorSecondary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <EditText
                    android:id="@+id/editor_type_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/main_hint_tea_type"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:paddingLeft="1dp"
                    android:paddingRight="16dp" />

                <EditText
                    android:id="@+id/editor_brand_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/main_hint_brand"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:paddingLeft="1dp"
                    android:paddingRight="16dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:text="@string/main_category_quantity"
                android:textColor="@color/colorSecondary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="2dp">

                <Button
                    android:id="@+id/editor_minus_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="-" />

                <EditText
                    android:id="@+id/editor_quantity_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingLeft="1dp"
                    android:paddingRight="16dp" />

                <Button
                    android:id="@+id/editor_plus_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="+" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:text="@string/main_category_price"
                android:textColor="@color/colorSecondary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="8dp">

                <EditText
                    android:id="@+id/editor_price_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/main_hint_price"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:paddingLeft="1dp"
                    android:paddingRight="16dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/editor_order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/editor_order_button" />
    </LinearLayout>
</ScrollView>